[gd_scene load_steps=25 format=3 uid="uid://btx5a2eak7h6o"]

[ext_resource type="Texture2D" uid="uid://bei7x67psb4c4" path="res://Assets_PixelAdventure/Main Characters/Mask Dude.png" id="1_bpe0d"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_ijcur"]
[ext_resource type="Script" path="res://Player/camera_2d.gd" id="3_rk2ot"]
[ext_resource type="LabelSettings" uid="uid://cckx0l3uvq558" path="res://Player/GUIText.tres" id="4_i2qdx"]
[ext_resource type="StyleBox" uid="uid://b7ys6k1gmivun" path="res://GUI/hpGUI.tres" id="5_8o4md"]
[ext_resource type="AudioStream" uid="uid://ba2hxqf376lg" path="res://Assets_PixelAdventure/Sounds/Jump.ogg" id="6_pi6jh"]
[ext_resource type="AudioStream" uid="uid://bk01bmd5p2v58" path="res://Assets_PixelAdventure/Sounds/Hit.ogg" id="7_8yb3t"]
[ext_resource type="Script" path="res://Player/StateMachine/StateMachine.gd" id="8_bu2s2"]
[ext_resource type="Script" path="res://Player/idle.gd" id="9_orv3f"]
[ext_resource type="Script" path="res://Player/moving.gd" id="10_y5s51"]
[ext_resource type="Script" path="res://Player/en_aire.gd" id="11_302ko"]
[ext_resource type="Script" path="res://Player/StateMachine/take_damage.gd" id="12_ql6rr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enusm"]
size = Vector2(19, 22)

[sub_resource type="Animation" id="Animation_8nfl4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_0xdfi"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_5750k"]
resource_name = "herido"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_5h70d"]
resource_name = "idle"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_gt367"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}

[sub_resource type="Animation" id="Animation_hyohh"]
resource_name = "jumpCaer"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_nm0e5"]
resource_name = "jumpDouble"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 29, 30, 23]
}

[sub_resource type="Animation" id="Animation_pk87m"]
resource_name = "walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_puj85"]
_data = {
"RESET": SubResource("Animation_8nfl4"),
"fall": SubResource("Animation_0xdfi"),
"herido": SubResource("Animation_5750k"),
"idle": SubResource("Animation_5h70d"),
"jump": SubResource("Animation_gt367"),
"jumpCaer": SubResource("Animation_hyohh"),
"jumpDouble": SubResource("Animation_nm0e5"),
"walk": SubResource("Animation_pk87m")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vw4sj"]
bg_color = Color(0.362903, 0.038659, 0.083906, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.701961, 0, 0.203922, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2gcxc"]
size = Vector2(19, 22)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 6
script = ExtResource("1_ijcur")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_bpe0d")
hframes = 11
vframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 5)
shape = SubResource("RectangleShape2D_enusm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_puj85")
}

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_rk2ot")

[node name="PlayerGUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerGUI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="FrutasLabel2" type="Label" parent="PlayerGUI/HBoxContainer"]
texture_filter = 2
layout_mode = 2
text = "Frutas:"
label_settings = ExtResource("4_i2qdx")

[node name="FrutasLabel" type="Label" parent="PlayerGUI/HBoxContainer"]
texture_filter = 2
layout_mode = 2

[node name="HPProgressBar" type="ProgressBar" parent="PlayerGUI"]
offset_left = 1.0
offset_top = -2.0
offset_right = 124.0
offset_bottom = 12.0
theme_override_styles/background = SubResource("StyleBoxFlat_vw4sj")
theme_override_styles/fill = ExtResource("5_8o4md")
max_value = 10.0
value = 5.0
show_percentage = false

[node name="RayCastDmg" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCastDmg"]
target_position = Vector2(0, 23)
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="RayCastDmg"]
position = Vector2(-7, 0)
target_position = Vector2(0, 23)
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="RayCastDmg"]
position = Vector2(7, 0)
target_position = Vector2(0, 23)
collision_mask = 2

[node name="Audio Salto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pi6jh")

[node name="AudioHerirse" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_8yb3t")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("8_bu2s2")
estado_inicial = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("9_orv3f")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("10_y5s51")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="enAire" type="Node" parent="StateMachine"]
script = ExtResource("11_302ko")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="takeDamage" type="Node" parent="StateMachine"]
script = ExtResource("12_ql6rr")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="LabelState" type="Label" parent="."]
offset_left = 1.0
offset_top = -44.0
offset_right = 41.0
offset_bottom = -21.0

[node name="RecibirDanio" type="Area2D" parent="." groups=["AreaPlayer"]]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="RecibirDanio"]
position = Vector2(0.5, 5)
shape = SubResource("RectangleShape2D_2gcxc")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/takeDamage" method="_on_animation_player_animation_finished"]
